<resources>
    <string name="app_name">MarvelApp3.0</string>
    <string name="text_bottom_nav_characters">Characters</string>
    <string name="text_bottom_nav_events">Events</string>
    <string name="content_description_character_poster">Character Poster</string>
    <string name="content_description_event_poster">Event Poster</string>
    <string name="content_description_expand_button">Expand Button</string>
    <string name="appears_in_these_comics">appears in these comics</string>
    <string name="header_event_comics">comics to discuss</string>
    <string name="error_generic">Oops! Something happened.</string>
    <string name="main_title">Marvel Challenge</string>
    <string name="retry_snackbar_action">RETRY</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="create_account">Not registered yet?. Please signup.</string>
    <string name="back_to_login">Already registered?. Please login.</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">1:669201029417:android:38e9f1541a1ce45cc17f38</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1:669201029417:android:38e9f1541a1ce45cc17f38</string>
    <string name="username_not_valid_error">Username not valid.</string>
    <string name="email_not_valid_error">Email not valid.</string>
    <string name="password_not_valid_error">Password not valid.</string>
    <string name="success_message">Success!</string>
    <string name="failed_message">Failed!</string>
</resources>